# DS2Tester

./: CMakeLists.txt  README.md  run.sh
include/: pad.h  sprite.h
src/: main.c  pad.c  sprite.c
